# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: Python CI
page_analyzer/: app.py  html_parser.py  normalize_url.py  parser.py
page_analyzer/templates/: index.html
page_analyzer/templates/urls/: show.html
templates/: index.html
templates/urls/: index.html  show.html
