[project]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = [
	{ name = "Захарчук Диана", email = "heilig1996@mail.ru" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Flask>=3.0.0",
    "ruff>=0.9.7"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["page_analyzer"]

[dependency-groups]
dev = [
    "ruff>=0.11.10",
]

[project.scripts]


[project.optional-dependencies]
dev = [
    "Flask>=3.0.0",
    "ruff>=0.9.7"
]
