[project]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = [
	{ name = "Захарчук Диана", email = "heilig1996@mail.ru" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.0.0",
    "gunicorn>=21.0.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.9",
    "ruff>=0.9.7"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["page_analyzer"]

[project.scripts]
app = "page_analyzer.app:app"

[project.optional-dependencies]
dev = [
    "Flask>=3.0.0",
    "ruff>=0.9.7"
]
